[tool.poetry]
name = "cycle"
version = "0.1.0"
description = ""
authors = ["tommyqamaz <solgrini@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
wandb = "^0.12.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytorch-lightning = "^1.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
